--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width initial-scale=1.0">
-		<title>index</title>
-	</head>
-	<body>
-	</body>
-</html>
 
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width initial-scale=1.0">
+	<title>Forrest Wolf</title>
+	<link rel="stylesheet" src="./css/main.css">
+</head>
+
+<body>
+</body>
+
+</html>
