--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width initial-scale=1.0">
-	<title>Forrest Wolf</title>
-	<link rel="stylesheet" src="./css/main.css">
-</head>
-
-<body>
-	<h2>Site is under construction.</h2>
-</body>
-
-</html>
+---
+layout: default
+title: Forrest Wolf
+---
+<h2>Site is under construction.</h2>
