Add basic homepage

--- a/index.html
+++ b/index.html
@@ -2,4 +2,11 @@
 layout: default
 title: Forrest Wolf
 ---
-<h2>Site is under construction.</h2>
+<div>
+  <div id="about">
+    <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" id="avatar" />
+    <div id="summary">
+      Hello! I'm Forrest Wolf, a software engineer (specializing in React, Node, Express) and musician (specializing in songwriting
+      and bowed psaltery), living in Brooklyn NY.
+    </div>
+  </div>
