Add basic contact page

--- a/contact_links.html
+++ b/contact_links.html
@@ -2,4 +2,37 @@
 layout: default
 title: Forrest Wolf - Contact
 ---
-<div></div>
+<div id="contact">
+	<ul class="contact">
+		<h2>Contact Information</h2>
+
+		<li>
+			<a href="mailto:forrest.weiswolf@gmail.com">
+				<img src="./assets/images/icons8-secured-letter-filled-50.png" class="contact-icon" />
+			</a>
+			<a href="mailto:Forrest.Weiswolf@gmail.com">forrest.weiswolf@gmail.com</a>
+		</li>
+
+		<li>
+			<a href="https://github.com/ForrestWeiswolf">
+				<img src="./assets/images/GitHub-Mark-32px.png" class="contact-icon" />
+			</a>
+			<a href="https://github.com/ForrestWeiswolf">Github</a>
+		</li>
+
+		<li>
+			<a href="https://www.linkedin.com/in/forrest-wolf/">
+				<img src="https://static.licdn.com/sc/h/2if24wp7oqlodqdlgei1n1520" class="contact-icon" />
+			</a>
+			<a href="https://www.linkedin.com/in/forrest-wolf/">LinkedIn</a>
+		</li>
+
+		<li>
+			<a href="https://twitter.com/ForrestWeiswolf">
+				<img src="./assets/images/Twitter_Logo_Blue.png" class="contact-icon" />
+			</a>
+			<a href="https://twitter.com/ForrestWeiswolf">@ForrestWeiswolf</a>
+		</li>
+
+	</ul>
+</div>
