--- a/code_projects.html
+++ b/code_projects.html
@@ -2,5 +2,23 @@
 layout: default
 title: Forrest Wolf - Code
 ---
-<div></div>
+<div>
+  <section class="project">
+    <img src="https://coordin-eat.herokuapp.com/favicon.ico" alt="Coordin-EAT map icon">
+    <h3><a href="coordin-eat.herokuapp.com">Coordin-EAT</a></h3>
+    <p>Coordin-EAT is a mobile-first web app to ease the pain of finding the perfect spot for dinner with your geographically inconvenient friends.</p>
+    <p>Built with the NERDS stack, Coordin-EAT uses Google’s Distance matrix API and an algorithm inspired by simulated annealing to calculated convenient meeting places, and MapboxGL to display them.</p>
+    <p>Deployed at <a href="coordin-eat.herokuapp.com"></a>coordin-eat.herokuapp.com</p>
+    <p>Code at <a href="github.com/Bluegrass-Grief-Owls/coordin-eat/">github.com/Bluegrass-Grief-Owls/coordin-eat/</a></p>
+    <p>Video of our presentation of this project at FSA Demo Day can be found <a href="youtube.com/watch?v=DUICbdd3uTU">here.</a> </p>
+  </section>
+
+  <section class="project">
+    <!-- <img src="https://coordin-eat.herokuapp.com/favicon.ico" alt="Coordin-EAT map icon"> -->
+    <h3><a href="https://www.npmjs.com/package/meristem">Meristem</a></h3>
+    <p>A lightweight (no dependencies!) Javascript library for procedural text generation using a context-free grammar. Like template literals, or Python's string formatting, but significantly more flexible.</p>
+    <p>NPM page: <a href="https://www.npmjs.com/package/meristem"></a>https://www.npmjs.com/package/meristem</p>
+    <p>Code at <a href="https://github.com/ForrestWeiswolf/Meristem">https://github.com/ForrestWeiswolf/Meristem</a></p>
+  </section>
+</div>
 
