--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: default
 title: Forrest Wolf
 ---
-<div id="about">
+<section id="about">
   <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" id="avatar" />
-  <div id="summary">
-    Hello! I'm Forrest Wolf, a software engineer (specializing in React, Node, Express) and musician (specializing in songwriting
-    and bowed psaltery), living in Brooklyn NY.
-  </div>
+  <section id="summary">
+    Hello! I'm Forrest Wolf, a software engineer (specializing in React, Node, Express) and musician living in Brooklyn, New York.
+  </section>
+
   <ul id="contact">
     <li>
       <a href="mailto:forrest.weiswolf@gmail.com">
