Add padding to nav and flex-direction to main

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@ title: Forrest Wolf
 ---
 <section id="about">
   <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" id="avatar" />
-  <section id="summary">
-    Hello! I'm Forrest Wolf, a software engineer (specializing in React, Node, Express) and musician living in Brooklyn, New York.
-  </section>
+  <span id="summary">
+    Hello! I'm Forrest Wolf, a software engineer (specializing in React, Node, Express) and musician living in Brooklyn, New
+    York.
+  </span>
+</section>
 
-  <ul id="contact">
+<section id="contact">
+  <ul>
     <li>
       <a href="mailto:forrest.weiswolf@gmail.com">
         <img src="./assets/images/icons8-secured-letter-filled-50.png" class="contact-icon" />
@@ -36,7 +39,5 @@ title: Forrest Wolf
       </a>
       <a href="https://twitter.com/ForrestWeiswolf">@ForrestWeiswolf</a>
     </li>
-
   </ul>
-
-</div>
+</section>
