--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: Forrest Wolf
 ---
 <section id="about">
-  <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" id="avatar" />
-  <span id="summary">
+  <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" id="avatar" class="left-side"/>
+  <span id="summary" class="right-side">
     Hello! I'm Forrest Wolf, a software engineer (specializing in React, Node, Express) and musician living in Brooklyn, New
     York.
   </span>
