--- a/code_projects.html
+++ b/code_projects.html
@@ -15,18 +15,19 @@ title: Forrest Wolf - Code
       <p>Built with the NERDS stack, Coordin-EAT uses Google’s Distance matrix API and an algorithm inspired by simulated annealing
         to calculated convenient meeting places, and MapboxGL to display them.</p>
       <p>Deployed:
-        <a href="coordin-eat.herokuapp.com"></a>coordin-eat.herokuapp.com</p>
+        <a href="https://www.coordin-eat.herokuapp.com">coordin-eat.herokuapp.com</a></p>
       <p>Github
-        <a href="github.com/Bluegrass-Grief-Owls/coordin-eat/">github.com/Bluegrass-Grief-Owls/coordin-eat/</a>
+        <a href="https://www.github.com/Bluegrass-Grief-Owls/coordin-eat/">github.com/Bluegrass-Grief-Owls/coordin-eat/</a>
       </p>
       <p>Video of our presentation of this project at FSA Demo Day:
-        <a href="youtube.com/watch?v=DUICbdd3uTU">here.</a>
+        <a href="https://www.youtube.com/watch?v=DUICbdd3uTU">here.</a>
       </p>
     </div>
   </section>
 
   <section class="project">
     <h2 class="left-side">
+      <img src="" alt="Meristem leaf icon">
       <a href="https://www.npmjs.com/package/meristem">Meristem</a>
     </h2>
     <div class="project-info right-side">
@@ -34,7 +35,8 @@ title: Forrest Wolf - Code
       <p>A lightweight (no dependencies!) Javascript library for procedural text generation using a context-free grammar. Like
         template literals, or Python's string formatting, but significantly more flexible.</p>
       <p>NPM:
-        <a href="https://www.npmjs.com/package/meristem"></a>https://www.npmjs.com/package/meristem</p>
+        <a href="https://www.npmjs.com/package/meristem">https://www.npmjs.com/package/meristem</a>
+      </p>
       <p>Github
         <a href="https://github.com/ForrestWeiswolf/Meristem">https://github.com/ForrestWeiswolf/Meristem</a>
       </p>
