Draft of the music page

--- a/music.html
+++ b/music.html
@@ -2,4 +2,39 @@
 layout: default
 title: Forrest Wolf - Music
 ---
-<div></div>
+<div>
+  <section class="project">
+    <h2 class="left-side">
+      <img src="" alt="Photo of my psaltery">
+      <a href="">Bowed Psaltery</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>I play a rather unusual instrument called a bowed psaltery.
+        <a href="">Here's</a> an explanation of what it's like.</p>
+    </div>
+  </section>
+  <section class="project">
+    <h2 class="left-side">
+      <img src="" alt="Across the Broken Land Cover - ">
+      <a href="">Across the Broken Land</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>
+        Every year, I participate in February Album Writing Month, a challenge to write and record an album during the month of February. In 2018, I wrote eleven songs comprising the album I have titled Domains and Angles, which centers on themes of the difficulty of communication, the changing nature of the city in which I live, and non-euclidean geometry.
+      </p>
+      <p>
+        The full album is not currently available, as mixing and arranging is a much longer process than songwriting, but a sample song, The Season of Rust, can be found <a href="https://soundcloud.com/user-957283792/the-season-of-rust-fawm-demo">here</a>.
+      </p>
+    </div>
+  </section>
+  <section class="project">
+    <h2 class="left-side">
+      <img src="" alt="Domains and Angles Cover - ">
+      <a href="">Domains and Angles</a>
+    </h2>
+    <div class="project-info right-side">
+      <p></p>
+    </div>
+  </section>
+
+</div>
