Use local images for projects

--- a/code_projects.html
+++ b/code_projects.html
@@ -5,7 +5,7 @@ title: Forrest Wolf - Code
 <div>
   <section class="project">
     <h2 class="left-side">
-      <img src="https://coordin-eat.herokuapp.com/favicon.ico" alt="Coordin-EAT map icon">
+      <img src="./assets/images/coordin-EAT.ico" alt="Coordin-EAT map icon">
       <a href="coordin-eat.herokuapp.com">Coordin-EAT</a>
     </h2>
     <div class="project-info right-side">
@@ -27,7 +27,7 @@ title: Forrest Wolf - Code
 
   <section class="project">
     <h2 class="left-side">
-      <img src="" alt="Meristem leaf icon">
+      <img src="./assets/images/meristem-icon.png" alt="Meristem leaf icon">
       <a href="https://www.npmjs.com/package/meristem">Meristem</a>
     </h2>
     <div class="project-info right-side">
