Add a bunch more programming projects

--- a/code_projects.html
+++ b/code_projects.html
@@ -3,27 +3,7 @@ layout: default
 title: Forrest Wolf - Code
 ---
 <div>
-  <section class="project">
-    <h2 class="left-side">
-      <img src="./assets/images/coordin-EAT.ico" alt="Coordin-EAT map icon">
-      <a href="coordin-eat.herokuapp.com">Coordin-EAT</a>
-    </h2>
-    <div class="project-info right-side">
-
-      <p>Coordin-EAT is a mobile-first web app to ease the pain of finding the perfect spot for dinner with your geographically
-        inconvenient friends.</p>
-      <p>Built with the NERDS stack, Coordin-EAT uses Google’s Distance matrix API and an algorithm inspired by simulated annealing
-        to calculated convenient meeting places, and MapboxGL to display them.</p>
-      <p>Deployed:
-        <a href="https://www.coordin-eat.herokuapp.com">coordin-eat.herokuapp.com</a></p>
-      <p>Github
-        <a href="https://www.github.com/Bluegrass-Grief-Owls/coordin-eat/">github.com/Bluegrass-Grief-Owls/coordin-eat/</a>
-      </p>
-      <p>Video of our presentation of this project at FSA Demo Day:
-        <a href="https://www.youtube.com/watch?v=DUICbdd3uTU">here.</a>
-      </p>
-    </div>
-  </section>
+  <h1>Projects</h1>
 
   <section class="project">
     <h2 class="left-side">
@@ -39,6 +19,115 @@ title: Forrest Wolf - Code
       </p>
       <p>Github
         <a href="https://github.com/ForrestWeiswolf/Meristem">https://github.com/ForrestWeiswolf/Meristem</a>
+      </p>
+    </div>
+  </section>
+
+  <section class="project">
+    <h2 class="left-side">
+      <img src="./assets/images/coordin-EAT.ico" alt="Coordin-EAT map icon">
+      <a href="coordin-eat.herokuapp.com">Coordin-EAT</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>Coordin-EAT is a mobile-first web app to ease the pain of finding the perfect spot for dinner with your geographically
+        inconvenient friends.</p>
+      <p>Built with the NERDS stack, Coordin-EAT uses Google’s Distance matrix API and an algorithm inspired by simulated annealing
+        to calculated convenient meeting places, and MapboxGL to display them.</p>
+      <p>I was part of the four-person team that built this webapp.</p>
+      <p>Deployed:
+        <a href="https://www.coordin-eat.herokuapp.com">coordin-eat.herokuapp.com</a>
+      </p>
+      <p>Github
+        <a href="https://www.github.com/Bluegrass-Grief-Owls/coordin-eat/">github.com/Bluegrass-Grief-Owls/coordin-eat/</a>
+      </p>
+      <p>Our presentation of this project at FSA Demo Day:
+        <a href="https://www.youtube.com/watch?v=DUICbdd3uTU">youtube.com/watch?v=DUICbdd3uTU</a>
+      </p>
+    </div>
+  </section>
+
+  <section class="project">
+    <h2 class="left-side">
+      <img src="./assets/images/meristem-icon.png" alt="Meristem leaf icon">
+      <a href="https://github.com/ForrestWeiswolf/Meristem-examples">Meristem Examples</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>Examples of usage for Meristem - generating random directions and mottos.</p>
+    </div>
+  </section>
+
+  <h1>Open-source contributions</h1>
+
+
+  <section class="project">
+    <h2 class="left-side">
+      <img src="./assets/images/lw.png" alt="LW">
+      <a href="https://lesswrong.com">LessWrong 2.0</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>
+        LessWrong2 is a clean-slate overhaul of the LessWrong discussion platform. As an open source contributor to, I fixed an error
+        that could cause the notifications page to be blank, and improved the comment interface to allow users viewing the
+        front page to more easily see the context of a comment.
+        <p>Github
+          <a href="https://github.com/Discordius/Lesswrong2/">https://github.com/Discordius/Lesswrong2/</a>
+        </p>
+      </p>
+    </div>
+  </section>
+
+  <section class="project">
+    <h2 class="left-side">
+      <img src="https://secularsolstice.github.io/dawn-bkg.jpg" alt="Dawn background from Secular Solstice site">
+      <a href="https://secularsolstice.github.io">Secular Solstice Resources</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>
+        I revised this site's CSS and meta tags to make it significantly easier to use on mobile.
+        <p>Github:
+          <a href="https://secularsolstice.github.io">https://secularsolstice.github.io</a>
+        </p>
+      </p>
+    </div>
+  </section>
+
+  <section class="project">
+    <h2 class="left-side">
+      <img src="https://camo.githubusercontent.com/9c24355bb3afbff914503b663ade7beb341079fa/68747470733a2f2f6e6f64656a732e6f72672f7374617469632f696d616765732f6c6f676f2d6c696768742e737667" alt="Node.js logo" />
+      <a href="https://nodejs.org/en/">Node.js</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>
+        Yes, that's Node.js itsself. It's a huge project, and just getting a development version running was by no means trivial.
+      </p>
+        <p>Nonetheless, I was able to make a contribution - making a certain error message clearer, basically - and may dontribute further in at some point.
+      </p>
+
+      <p>Github:
+        <a href="https://github.com/nodejs/node/pull/19659">https://github.com/nodejs/node/pull/19659</a>
+      </p>
+    </div>
+  </section>
+
+  <section class="project">
+    <h2 class="left-side">
+      <img src="https://camo.githubusercontent.com/5c385f15f3eaedb72cfcfbbaf75355b700ac0757/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6f686d797a73682f6f682d6d792d7a73682d6c6f676f2e706e67" alt="oh-my-zsh" />
+      <a href="https://ohmyz.sh/">Oh My Zsh</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>
+        I wrote a README for the Gitfast plugin for Oh My Zsh during Hacktoberfest 2018.
+      </p>
+    </div>
+  </section>
+
+  <section class="project">
+    <h2 class="left-side">
+      <a href="https://github.com/BakeItTillYouMakeIt/LeetCodeJS">Leetcode JS</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>
+        I contributed example solutions to a bunch of algorithm questions here. Mostly aimed for important ones they were missing, rather than the most interesting ones to solve.
       </p>
     </div>
   </section>
