Refactor CSS with .flex class

--- a/music.html
+++ b/music.html
@@ -3,7 +3,7 @@ layout: default
 title: Forrest Wolf - Music
 ---
 <div>
-  <section class="project">
+  <section class="project flex">
     <h2 class="left-side">
       <img src="" alt="Photo of my psaltery">
       <a href="">Bowed Psaltery</a>
@@ -13,7 +13,7 @@ title: Forrest Wolf - Music
         <a href="">Here's</a> an explanation of what it's like.</p>
     </div>
   </section>
-  <section class="project">
+  <section class="project flex">
     <h2 class="left-side">
       <img src="" alt="Across the Broken Land Cover - ">
       <a href="">Across the Broken Land</a>
@@ -27,7 +27,7 @@ title: Forrest Wolf - Music
       </p>
     </div>
   </section>
-  <section class="project">
+  <section class="project flex">
     <h2 class="left-side">
       <img src="" alt="Domains and Angles Cover - ">
       <a href="">Domains and Angles</a>
