--- a/code_projects.html
+++ b/code_projects.html
@@ -5,7 +5,7 @@ title: Forrest Wolf - Code
 <div>
   <h1>Projects</h1>
 
-  <section class="project">
+  <section class="project flex">
     <h2 class="left-side">
       <img src="./assets/images/meristem-icon.png" alt="Meristem leaf icon">
       <a href="https://www.npmjs.com/package/meristem">Meristem</a>
@@ -23,7 +23,7 @@ title: Forrest Wolf - Code
     </div>
   </section>
 
-  <section class="project">
+  <section class="project flex">
     <h2 class="left-side">
       <img src="./assets/images/coordin-EAT.ico" alt="Coordin-EAT map icon">
       <a href="coordin-eat.herokuapp.com">Coordin-EAT</a>
@@ -46,7 +46,7 @@ title: Forrest Wolf - Code
     </div>
   </section>
 
-  <section class="project">
+  <section class="project flex">
     <h2 class="left-side">
       <img src="./assets/images/meristem-icon.png" alt="Meristem leaf icon">
       <a href="https://github.com/ForrestWeiswolf/Meristem-examples">Meristem Examples</a>
@@ -59,7 +59,7 @@ title: Forrest Wolf - Code
   <h1>Open-source contributions</h1>
 
 
-  <section class="project">
+  <section class="project flex">
     <h2 class="left-side">
       <img src="./assets/images/lw.png" alt="LW">
       <a href="https://lesswrong.com">LessWrong 2.0</a>
@@ -76,7 +76,7 @@ title: Forrest Wolf - Code
     </div>
   </section>
 
-  <section class="project">
+  <section class="project flex">
     <h2 class="left-side">
       <img src="https://secularsolstice.github.io/dawn-bkg.jpg" alt="Dawn background from Secular Solstice site">
       <a href="https://secularsolstice.github.io">Secular Solstice Resources</a>
@@ -91,7 +91,7 @@ title: Forrest Wolf - Code
     </div>
   </section>
 
-  <section class="project">
+  <section class="project flex">
     <h2 class="left-side">
       <img src="https://camo.githubusercontent.com/9c24355bb3afbff914503b663ade7beb341079fa/68747470733a2f2f6e6f64656a732e6f72672f7374617469632f696d616765732f6c6f676f2d6c696768742e737667" alt="Node.js logo" />
       <a href="https://nodejs.org/en/">Node.js</a>
@@ -109,7 +109,7 @@ title: Forrest Wolf - Code
     </div>
   </section>
 
-  <section class="project">
+  <section class="project flex">
     <h2 class="left-side">
       <img src="https://camo.githubusercontent.com/5c385f15f3eaedb72cfcfbbaf75355b700ac0757/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6f686d797a73682f6f682d6d792d7a73682d6c6f676f2e706e67" alt="oh-my-zsh" />
       <a href="https://ohmyz.sh/">Oh My Zsh</a>
@@ -121,7 +121,7 @@ title: Forrest Wolf - Code
     </div>
   </section>
 
-  <section class="project">
+  <section class="project flex">
     <h2 class="left-side">
       <a href="https://github.com/BakeItTillYouMakeIt/LeetCodeJS">Leetcode JS</a>
     </h2>
