Fix typos in code projects page

--- a/code_projects.html
+++ b/code_projects.html
@@ -17,7 +17,7 @@ title: Forrest Wolf - Code
       <p>NPM:
         <a href="https://www.npmjs.com/package/meristem">https://www.npmjs.com/package/meristem</a>
       </p>
-      <p>Github
+      <p>Github:
         <a href="https://github.com/ForrestWeiswolf/Meristem">https://github.com/ForrestWeiswolf/Meristem</a>
       </p>
     </div>
@@ -37,7 +37,7 @@ title: Forrest Wolf - Code
       <p>Deployed:
         <a href="https://www.coordin-eat.herokuapp.com">coordin-eat.herokuapp.com</a>
       </p>
-      <p>Github
+      <p>Github:
         <a href="https://www.github.com/Bluegrass-Grief-Owls/coordin-eat/">github.com/Bluegrass-Grief-Owls/coordin-eat/</a>
       </p>
       <p>Our presentation of this project at FSA Demo Day:
@@ -69,7 +69,7 @@ title: Forrest Wolf - Code
         LessWrong2 is a clean-slate overhaul of the LessWrong discussion platform. As an open source contributor to, I fixed an error
         that could cause the notifications page to be blank, and improved the comment interface to allow users viewing the
         front page to more easily see the context of a comment.
-        <p>Github
+        <p>Github:
           <a href="https://github.com/Discordius/Lesswrong2/">https://github.com/Discordius/Lesswrong2/</a>
         </p>
       </p>
@@ -98,9 +98,9 @@ title: Forrest Wolf - Code
     </h2>
     <div class="project-info right-side">
       <p>
-        Yes, that's Node.js itsself. It's a huge project, and just getting a development version running was by no means trivial.
+        Node.js itself is a huge project, and just getting a development version running was by no means trivial.
       </p>
-        <p>Nonetheless, I was able to make a contribution - making a certain error message clearer, basically - and may dontribute further in at some point.
+        <p>Nonetheless, I was able to make a contribution - making a certain error message clearer, basically - and may contribute further in at some point.
       </p>
 
       <p>Github:
