Add descriptions to project pages

--- a/code_projects.html
+++ b/code_projects.html
@@ -3,6 +3,12 @@ layout: default
 title: Forrest Wolf - Code
 ---
 <div>
+  <p>Professionally, I'm a full-stack software engineer. Mostly Node/Express/React, but willing to use whatever technology suits what I'm trying to do.</p>
+  <p>Here are some projects I’ve worked on.</p>
+  <p>
+    (All of this, as well as some miscelaneous or unfinished projects, can also be found on my <a href="https://github.com/ForrestWeiswolf">Github account</a>, which might be more up to date. If you’re looking for work I’ve done professionally, rather than open-source / personal projects, you might want to check out <a href="https://www.linkedin.com/in/forrest-wolf/">LinkedIn</a>.)
+  </p>
+
   <h1>Projects</h1>
 
   <section class="project flex">
