--- a/music.html
+++ b/music.html
@@ -3,6 +3,13 @@ layout: default
 title: Forrest Wolf - Music
 ---
 <div>
+  <p>Music is a large part of my life, though I've never tried to make a living off it.</p>
+  <p>I'm a songwriter, play the bowed psaltery, and sing frequently even though I never got to be much good at it.</p>
+  <p>
+    Every year, I participate in February Album Writing Month (FAWM), a challenge to write and record an album during the month of February. Most of these aren't currently available, as mixing and arranging is a much longer process than songwriting; but links to a few songs that are further along in that process or otherwise noteworthy can be found on this page.
+  </p>
+  <p>Some projects I've worked on can be found below.</p>
+
   <section class="project flex">
     <h2 class="left-side">
       <img src="" alt="Photo of my psaltery">
