Add mkjsx to code projects list

--- a/code_projects.html
+++ b/code_projects.html
@@ -29,6 +29,16 @@ title: Forrest Wolf - Code
     </div>
   </section>
 
+  <!-- <section class="project flex">
+    <h2 class="left-side">
+      <img src="./assets/images/meristem-icon.png" alt="Meristem leaf icon">
+      <a href="https://github.com/ForrestWeiswolf/Meristem-examples">Meristem Examples</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>Examples of usage for Meristem - generating random directions and mottos.</p>
+    </div>
+  </section> -->
+
   <section class="project flex">
     <h2 class="left-side">
       <img src="./assets/images/coordin-EAT.ico" alt="Coordin-EAT map icon">
@@ -54,13 +64,39 @@ title: Forrest Wolf - Code
 
   <section class="project flex">
     <h2 class="left-side">
-      <img src="./assets/images/meristem-icon.png" alt="Meristem leaf icon">
-      <a href="https://github.com/ForrestWeiswolf/Meristem-examples">Meristem Examples</a>
+      <img src="https://reactjs.org/favicon.ico" alt="React icon">
+      <a href="https://www.npmjs.com/package/mkjsx">mkjsx</a>
     </h2>
     <div class="project-info right-side">
-      <p>Examples of usage for Meristem - generating random directions and mottos.</p>
+      <p>React components have a certain amount of boilerplate. For a while, I had a bunch of shell functions to create components of various types, but then I realized that this could be done better with a dedicated command-line tool, and I wasn't satisfied with the component generators that were already out there.</p>
+      <p>That was the motivation behind creating mkjsx and publishing it on NPM.</p>
+      <p>Deployed:
+        <a href="https://www.coordin-eat.herokuapp.com">coordin-eat.herokuapp.com</a>
+      </p>
+      <p>NPM:
+        <a href="https://www.npmjs.com/package/mkjsx">https://www.npmjs.com/package/mkjsx</a>
+      </p>
+      <p>Github:
+        <a href="https://github.com/ForrestWeiswolf/mkjsx">https://github.com/ForrestWeiswolf/mkjsx</a>
+      </p>
     </div>
   </section>
+
+  <!-- <section class="project flex">
+    <h2 class="left-side">
+      <a href="https://forrestweiswolf.github.io/echo/">Echo</a>
+    </h2>
+    <div class="project-info right-side">
+      <p></p>
+      <p>Deployed:
+        <a href="https://forrestweiswolf.github.io/echo/">ForrestWeiswolf.github.io/echo/</a>
+      </p>
+      <p>Github:
+        <a href="https://github.com/ForrestWeiswolf/echo">https://github.com/ForrestWeiswolf/echo</a>
+      </p>
+    </div>
+  </section> -->
+
 
   <h1>Open-source contributions</h1>
 
