Add draft of music projects page

--- a/music.html
+++ b/music.html
@@ -3,45 +3,55 @@ layout: default
 title: Forrest Wolf - Music
 ---
 <div>
-  <p>Music is a large part of my life, though I've never tried to make a living off it.</p>
   <p>I'm a songwriter, play the bowed psaltery, and sing frequently even though I never got to be much good at it.</p>
   <p>
     Every year, I participate in February Album Writing Month (FAWM), a challenge to write and record an album during the month of February. Most of these aren't currently available, as mixing and arranging is a much longer process than songwriting; but links to a few songs that are further along in that process or otherwise noteworthy can be found on this page.
   </p>
-  <p>Some projects I've worked on can be found below.</p>
+  <p>A few of the projects I've worked on can be found below.</p>
 
   <section class="project flex">
     <h2 class="left-side">
-      <img src="" alt="Photo of my psaltery">
-      <a href="">Bowed Psaltery</a>
+      <!-- <img src="./assets/images/psaltery.jpg" alt="Photo of my psaltery"> -->
+      <a href="./psaltery.html">Bowed Psaltery</a>
     </h2>
     <div class="project-info right-side">
       <p>I play a rather unusual instrument called a bowed psaltery.
-        <a href="">Here's</a> an explanation of what it's like.</p>
+        <a href="./psaltery.html">Here's</a> an explanation of what it's like.</p>
     </div>
   </section>
   <section class="project flex">
     <h2 class="left-side">
-      <img src="" alt="Across the Broken Land Cover - ">
-      <a href="">Across the Broken Land</a>
+      <!-- <img src="" alt="Across the Broken Land Cover - "> -->
+      Across the Broken Land
     </h2>
     <div class="project-info right-side">
       <p>
-        Every year, I participate in February Album Writing Month, a challenge to write and record an album during the month of February. In 2018, I wrote eleven songs comprising the album I have titled Domains and Angles, which centers on themes of the difficulty of communication, the changing nature of the city in which I live, and non-euclidean geometry.
-      </p>
-      <p>
-        The full album is not currently available, as mixing and arranging is a much longer process than songwriting, but a sample song, The Season of Rust, can be found <a href="https://soundcloud.com/user-957283792/the-season-of-rust-fawm-demo">here</a>.
+        During February Album Writing Month 2019, I wrote five songs comprising a first draft of the album to be titled <i>Across The Broken Land</i>.
       </p>
     </div>
   </section>
   <section class="project flex">
     <h2 class="left-side">
-      <img src="" alt="Domains and Angles Cover - ">
-      <a href="">Domains and Angles</a>
+      <!-- <img src="" alt="Domains and Angles Cover - "> -->
+      Domains and Angles
     </h2>
     <div class="project-info right-side">
-      <p></p>
+      <p>
+          During February Album Writing Month 2018, I wrote eleven songs comprising the album I have titled <i>Domains and Angles</i>, which centers on themes of the difficulty of communication, the changing nature of the city in which I live, and non-euclidean geometry.
+      </p>
+      <p>
+        A sample song, The Season of Rust, can be found <a href="https://soundcloud.com/user-957283792/the-season-of-rust-fawm-demo">here</a>.
+      </p>
     </div>
   </section>
-
+  <!-- <section class="project flex">
+      <h2 class="left-side">
+        <img src="" alt="Remember the World cover - ">
+        <a href="">Remember the World</a>
+      </h2>
+      <div class="project-info right-side">
+        <p>
+        </p>
+      </div>
+    </section> -->
 </div>
