Fix image scaling on about page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: default
 title: Forrest Wolf
 ---
 <section id="about" class="flex">
-  <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" id="avatar" class="left-side"/>
+  <div class="left-side">
+    <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" id="avatar" />
+  </div>
   <span id="summary" class="right-side">
     Hello! I'm Forrest Wolf, a software engineer (specializing in React, Node, Express) and musician living in Brooklyn, New
     York.
