Change formatting of contact info

--- a/index.html
+++ b/index.html
@@ -6,44 +6,50 @@ title: Forrest Wolf
   <div class="left-side">
     <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" id="avatar" />
   </div>
-  <span id="summary" class="right-side">
-    Hello! I'm Forrest Wolf, a software engineer (specializing in React, Node, Express) and musician living in Brooklyn, New
-    York.
-  </span>
-</section>
+  <div class="right-side">
+    <section id="summary">
+      <h4>About</h4>
+      Hello! I'm Forrest Wolf, a software engineer (specializing in React, Node, Express) and musician living in Brooklyn, New
+      York. I play an instrument found at one of those mysterious shops - the ones where if you go back later, there’s no
+      sign of it ever having been there at all - and carry at all times a notebook full of strange symbols no-one else can
+      read.
+    </section>
 
-<section id="contact">
-  <ul>
-    <li>
-      <a href="mailto:forrest.weiswolf@gmail.com">
-        <img src="./assets/images/icons8-secured-letter-filled-50.png" class="contact-icon" />
-      </a>
-      <a href="mailto:Forrest.Weiswolf@gmail.com">forrest.weiswolf@gmail.com</a>
-    </li>
+    <section id="contact">
+      <h4>Contact</h4>
+      <ul>
+        <li>
+          <a href="mailto:forrest.weiswolf@gmail.com">
+            <img src="./assets/images/icons8-secured-letter-filled-50.png" class="contact-icon" />
+          </a>
+          <a href="mailto:Forrest.Weiswolf@gmail.com">forrest.weiswolf@gmail.com</a>
+        </li>
 
-    <li>
-      <a href="https://github.com/ForrestWeiswolf">
-        <img src="./assets/images/GitHub-Mark-32px.png" class="contact-icon" />
-      </a>
-      <a href="https://github.com/ForrestWeiswolf">Github</a>
-    </li>
+        <li>
+          <a href="https://github.com/ForrestWeiswolf">
+            <img src="./assets/images/GitHub-Mark-32px.png" class="contact-icon" />
+          </a>
+          <a href="https://github.com/ForrestWeiswolf">Github</a>
+        </li>
 
-    <li>
-      <a href="https://www.linkedin.com/in/forrest-wolf/">
-        <img src="https://static.licdn.com/sc/h/2if24wp7oqlodqdlgei1n1520" class="contact-icon" />
-      </a>
-      <a href="https://www.linkedin.com/in/forrest-wolf/">LinkedIn</a>
-    </li>
+        <li>
+          <a href="https://www.linkedin.com/in/forrest-wolf/">
+            <img src="https://static.licdn.com/sc/h/2if24wp7oqlodqdlgei1n1520" class="contact-icon" />
+          </a>
+          <a href="https://www.linkedin.com/in/forrest-wolf/">LinkedIn</a>
+        </li>
 
-    <li>
-      <a href="https://twitter.com/ForrestWeiswolf">
-        <img src="./assets/images/Twitter_Logo_Blue.png" class="contact-icon" />
-      </a>
-      <a href="https://twitter.com/ForrestWeiswolf">Twitter</a>
-    </li>
+        <li>
+          <a href="https://twitter.com/ForrestWeiswolf">
+            <img src="./assets/images/Twitter_Logo_Blue.png" class="contact-icon" />
+          </a>
+          <a href="https://twitter.com/ForrestWeiswolf">Twitter</a>
+        </li>
 
-    <li>
-      <a href="http://www.admonymous.co/forrestwolf">Admonymous</a>
-    </li>
-  </ul>
+        <li>
+          <a href="http://www.admonymous.co/forrestwolf">Admonymous</a>
+        </li>
+      </ul>
+    </section>
+  </div>
 </section>
