Change phrasing in echo description

--- a/code_projects.html
+++ b/code_projects.html
@@ -87,7 +87,7 @@ title: Forrest Wolf - Code
       <a href="https://forrestweiswolf.github.io/echo/">Echo</a>
     </h2>
     <div class="project-info right-side">
-      <p>When practcing playing a song, I sometimes want to play and record a very short part of it, listen to that in order to hear whether I got the timing right, then repeat, potentially repeating this many times in a row.</p>
+      <p>When practicing a song, I sometimes want to play and record a very short part of it, listen to that in order to hear whether I got the timing right, then repeat, potentially repeating this many times in a row.</p>
       <p>Putting down my bow to reset the recording every time is inconvenient and distracting when working on a section that's only seconds long, so I made this webpage, which records for a specified number of seconds, plays it back, then waits a specified number of seconds before starting over.</p>
       <p>Deployed:
         <a href="https://forrestweiswolf.github.io/echo/">ForrestWeiswolf.github.io/echo/</a>
