CSS for larger images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Forrest Wolf
 ---
 <section id="about" class="flex">
   <div class="left-side">
-    <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" id="avatar" />
+    <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" class="large-image" />
   </div>
   <div class="right-side">
     <section id="summary">
