--- a/psaltery.html
+++ b/psaltery.html
@@ -3,13 +3,17 @@ layout: default
 title: Forrest Wolf - Psaltery
 ---
 <div class="flex">
-  <img src="./assets/images/psaltery.jpg" class="left-side"/>
-  <span id="summary" class="right-side">
-    <p>Since I play an instrument that most people have never heard of, I get asked questions about that pretty often, typically starting with “What’s a psaltery?”,</p>
-    <p>The bowed psaltery is a stringed instrument, played, of course, with a bow — or alternatively, laid in the musician’s lap and played with two bows, one in each hand. (Plucked psalteries also exist, but are only distantly related.) </p>
-    <p> A psaltery has 24 to 32 strings  - you don't fret it, so there's exactly one string per note. It is shaped like an isosceles triangle, with the strings laid out such that sharp notes are on the left side and naturals on the right.  which, due to the shape of the instrument, can (only) be played individually, rather than as chords. With two bows, however, it is possible to play two notes simultaneously.</p>
-    <p>My own psaltery has been, I think, a major influence on my musical style, even in songs without her. A psaltery is more or less a strictly melodic instrument - no more than two notes can be played at once, so you can't really play chords. It has a very clear, ringing sound, though the sustain and high-mid frequencies can make recording tricky, and the two-bow style I prefer allows very smooth transitions between notes.</p>
-    <p>Here's the <a href="http://en.wikipedia.org/wiki/Bowed_psaltery">Wikipedia article</a></p>
-    <p>It’s a unique sound, so let me conclude with <a href="https://dl.dropboxusercontent.com/u/91323563/Loch%20Lomond.mp3">a recording</a>.</p>
-  </span>
+  <div class="left-side">
+    <img src="./assets/images/psaltery.jpg" class="large-image"/>
+  </div>
+  <div class="right-side">
+    <section  id="summary">
+      <p>Since I play an instrument that most people have never heard of, I get asked questions about that pretty often, typically starting with “What’s a psaltery?”,</p>
+      <p>The bowed psaltery is a stringed instrument, played, of course, with a bow — or alternatively, laid in the musician’s lap and played with two bows, one in each hand. (Plucked psalteries also exist, but are only distantly related.) </p>
+      <p> A psaltery has 24 to 32 strings  - you don't fret it, so there's exactly one string per note. It is shaped like an isosceles triangle, with the strings laid out such that sharp notes are on the left side and naturals on the right.  which, due to the shape of the instrument, can (only) be played individually, rather than as chords. With two bows, however, it is possible to play two notes simultaneously.</p>
+      <p>My own psaltery has been, I think, a major influence on my musical style, even in songs without her. A psaltery is more or less a strictly melodic instrument - no more than two notes can be played at once, so you can't really play chords. It has a very clear, ringing sound, though the sustain and high-mid frequencies can make recording tricky, and the two-bow style I prefer allows very smooth transitions between notes.</p>
+      <p>Here's the <a href="http://en.wikipedia.org/wiki/Bowed_psaltery">Wikipedia article</a></p>
+      <p>It’s a unique sound, so let me conclude with <a href="https://dl.dropboxusercontent.com/u/91323563/Loch%20Lomond.mp3">a recording</a>.</p>
+    </section>
+  </div>
 </div>
