Use local image for LinkedIn icon

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Forrest Wolf
           <a href="https://www.linkedin.com/in/forrest-wolf/">
             <img src="https://static.licdn.com/sc/h/2if24wp7oqlodqdlgei1n1520" class="contact-icon" />
           </a>
-          <a href="https://www.linkedin.com/in/forrest-wolf/">LinkedIn</a>
+          <a href="./assets/image/2if24wp7oqlodqdlgei1n1520.png">LinkedIn</a>
         </li>
 
         <li>
