Fix link to Coordin-EAT

--- a/code_projects.html
+++ b/code_projects.html
@@ -42,7 +42,7 @@ title: Forrest Wolf - Code
   <section class="project flex">
     <h2 class="left-side">
       <img src="./assets/images/coordin-EAT.ico" alt="Coordin-EAT map icon">
-      <a href="coordin-eat.herokuapp.com">Coordin-EAT</a>
+      <a href="https://coordin-eat.herokuapp.com">Coordin-EAT</a>
     </h2>
     <div class="project-info right-side">
       <p>Coordin-EAT is a mobile-first web app to ease the pain of finding the perfect spot for dinner with your geographically
@@ -51,7 +51,7 @@ title: Forrest Wolf - Code
         to calculated convenient meeting places, and MapboxGL to display them.</p>
       <p>I was part of the four-person team that built this webapp.</p>
       <p>Deployed:
-        <a href="https://www.coordin-eat.herokuapp.com">coordin-eat.herokuapp.com</a>
+        <a href="https://coordin-eat.herokuapp.com">coordin-eat.herokuapp.com</a>
       </p>
       <p>Github:
         <a href="https://www.github.com/Bluegrass-Grief-Owls/coordin-eat/">github.com/Bluegrass-Grief-Owls/coordin-eat/</a>
