Simplify About page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@ title: Forrest Wolf
   <div class="right-side">
     <section id="summary">
       <h4>About</h4>
-      Hello! I'm Forrest Wolf, a software engineer (specializing in React, Node, Express) and musician living in Brooklyn, New
-      York. I play an instrument found at one of those mysterious shops - the ones where if you go back later, there’s no
-      sign of it ever having been there at all - and carry at all times a notebook full of strange symbols no-one else can
-      read.
+      I'm Forrest Wolf, a software engineer and musician. Currently living in Brooklyn, NY; previously Des Moines, IA.
     </section>
 
     <section id="contact">
